# voxel-thing

./: .gitignore  .gitmodules  CMakeLists.txt  block.db
data/: block.db  world.json
dev/: sontoya.kra
includes/: application.hpp  block.hpp  block_database.hpp  camera.hpp  chunk.hpp  chunk_mesh.hpp  config.hpp  context.hpp  cursor.hpp  data.hpp  editor_info_pane.hpp  editor_state.hpp  entity.hpp  game.hpp  game_state.hpp  input.hpp  key_manager.hpp  math_utils.hpp  mesh.hpp  render_manager.hpp  renderer.hpp  screen_context.hpp  shader.hpp  state.hpp  state_switcher.hpp  texture.hpp  tooltip.hpp  tooltip_renderer.hpp  utils.hpp  view.hpp  vr_context.hpp  vr_state.hpp  world.hpp  world_builder.hpp  world_renderer.hpp
includes/E/: application.hpp  camera.hpp  config.hpp  context.hpp  entity.hpp  input.hpp  key_manager.hpp  mesh.hpp  render_manager.hpp  renderer.hpp  screen_context.hpp  shader.hpp  state.hpp  texture.hpp  texture_atlas.hpp  utils.hpp  view.hpp  vr_context.hpp
includes/editor/: cursor.hpp  editor.hpp  editor_info_pane.hpp  editor_state.hpp  state_switcher.hpp  tooltip.hpp  tooltip_renderer.hpp
shaders/: block_lighting.frag  default.fs  default.vert  default.vs  hud.frag  hud.vert  lighting.frag  lighting.vert  pos_gizmo.frag  pos_gizmo.vert  tooltip.frag  tooltip.vert
src/: application.cpp  block_database.cpp  camera.cpp  chunk.cpp  chunk_mesh.cpp  config.cpp  cursor.cpp  editor_info_pane.cpp  editor_state.cpp  entity.cpp  game.cpp  game_state.cpp  input.cpp  key_manager.cpp  main.cpp  math_utils.cpp  mesh.cpp  render_manager.cpp  screen_context.cpp  shader.cpp  state.cpp  state_switcher.cpp  texture.cpp  tooltip.cpp  tooltip_renderer.cpp  utils.cpp  vr_context.cpp  vr_state.cpp  world.cpp  world_builder.cpp  world_renderer.cpp
src/E/: application.cpp  camera.cpp  config.cpp  input.cpp  key_manager.cpp  mesh.cpp  render_manager.cpp  screen_context.cpp  shader.cpp  state.cpp  texture.cpp  texture_atlas.cpp  utils.cpp  vr_context.cpp
src/editor/: cursor.cpp  editor_info_pane.cpp  editor_state.cpp  state_switcher.cpp  tooltip.cpp  tooltip_renderer.cpp
